--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react-alice-carousel": "^2.5.1",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
