--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "antd": "4.18.7",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "axios": "^0.26.0",
     "react-alice-carousel": "^2.5.1",
+    "reactstrap":"^9.0.1",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1",
